# pastor-transcript-extractor

./: .gitignore  AGENTS.md  README.md  pyproject.toml  venv-shell
docs/: HANDOFF.md  MEDIA_FOUNDATION.md  V1_SPEC.md
evaluation/: SOURCE_FAMILIES.md  source-families.json
evaluation/baselines/: sermon-localization-v1.json
evaluation/experiments/: semantic-program-verifier-v1-v2.md
evaluation/fixtures/: -WNpk9eQuBw.json  -pDhyqDWAqM.json  04AlAR6Fokc.json  0rBK6jhjAqc.json  1drtyz9IR7M.json  1j3bsjiZGOA.json  8vv9vdAVUc8.json  CcCTs9ONhf4.json  Dqi9mE0m4GI.json  DricHaCmUJA.json  FX8u26Umjr0.json  Hr-ZkI5iCW8.json  JRGyASOV5QU.json  NJg9pZfwYG0.json  NKNFh_xoDfU.json  NeceoWYZRmg.json  OBK7fBLTM6o.json  Ojfa50ULQ40.json  QIqMpJfY-fQ.json  SkFMSg4ziEQ.json  TyNvrFPC5AU.json  WXC9wpdLqAk.json  WaNsL05AX3A.json  X5ac9Ko9nxA.json  ZPOHsHywi6w.json  b-wINqT07Ss.json  dTDAt941Gf8.json  eABHqFNNqHM.json  fcZNzRYQOtA.json  (+15 more)
tests/: test_application.py  test_church_database_import.py  test_disposition.py  test_evaluation.py  test_evaluation_baseline.py  test_evaluation_partitioning.py  test_filesystem_capacity.py  test_fixture_validation.py  test_ground_truth_review.py  test_identity.py  test_identity_attribution.py  test_interaction_diagnostics.py  test_local_llm.py  test_media_artifacts.py  test_recording_verifier_diagnostics.py  test_sermon_classification.py  test_sermon_fixture_selector.py  test_sources.py  test_speaker_pair_diagnostics.py  test_speaker_pair_eligibility.py  test_speaker_pair_review.py  test_speaker_pair_selector.py  test_speaker_registry.py
(+47 files in other folders)
